<resources>
    <string name="app_name">MattCulator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="aC">AC</string>
    <string name="posORNeg">+/-</string>
    <string name="power">x^y</string>
    <string name="division">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiplication">X</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subtraction">-</string>
    <string name = "one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="addition">+</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="equals">=</string>

</resources>
