<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#476953">


    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#D2CDCD"
        android:layout_weight="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/firstline"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/secondline"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/thirdline"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/fourthline"
            android:layout_weight="1"/>

    </LinearLayout>

 <!--<&#45;&#45;First ROW&ndash;&gt;-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/AC"
                android:text="@string/aC"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/PosOrNeg"
                android:text="@string/posORNeg"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/toThePower"
                android:text="@string/power"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/division"
                android:text="@string/division"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/seven"
                android:text="@string/seven"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/eight"
                android:text="@string/eight"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/nine"
                android:text="@string/nine"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/multiplication"
                android:text="@string/multiplication"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/four"
                android:text="@string/four"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/five"
                android:text="@string/five"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/six"
                android:text="@string/six"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/subtraction"
                android:text="@string/subtraction"
                android:layout_weight="1"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/one"
                android:text="@string/one"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/two"
                android:text="@string/eight"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/three"
                android:text="@string/three"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/addition"
                android:text="@string/addition"
                android:layout_weight="1"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/zero"
                android:text="@string/zero"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/point"
                android:text="@string/point"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/equals"
                android:text="@string/equals"
                android:layout_weight="1"/>

        </LinearLayout>



    </LinearLayout>




</LinearLayout>
